fix second half-third fifth

--- a/survey/test.html
+++ b/survey/test.html
@@ -121,8 +121,8 @@ var app = new Vue({
 //			$('#' + this.current).val(results);
 //			const val = $('#' + this.current).val();
 //			console.log(question_no);
-			
-			setTimeout(this.nextQuestion,1000);
+			/*lx for third*/
+			setTimeout(this.nextQuestion,2500);
 				
 //				console.log(id);
 //			if(this.current < this.num){
