fix bug1 for login.third_login

--- a/login/third_login.html
+++ b/login/third_login.html
@@ -16,7 +16,8 @@
 
 <body>
 <div class="page" id="app">
-	<p style="color:#888;font-size: 14px;position:absolute;left:0;top:40%;width:100%;text-align:center;">正在登录</p>
+	<!--lx for bug1 for login-->
+	<p style="color:#888;font-size: 16px;position:absolute;left:0;top:40%;width:100%;text-align:center;">正在登录</p>
 </div>
 </body>
 
