--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@ var app = new Vue({
 	    this.scale = [
 			{
 			    id: 1,
-				cover_img: null,
+				cover_img: "images/ban1.jpg",
 				title: 'index 静态数据1',
 				price: 1.99,
                 tag_name: '测试1'
 			},
             {
                 id: 2,
-                cover_img: null,
+                cover_img: "images/ban1.jpg",
                 title: 'index 静态数据2',
                 price: 1.99,
                 tag_name: '测试2'
