--- a/survey/desc.html
+++ b/survey/desc.html
@@ -58,11 +58,11 @@ var app = new Vue({
 		/*lx ststic data*/
 		this.data = {
 		    title: '进行测试',
-            cover_img: null,
+            cover_img: "../images/ban3.jpg",
             content: 'huhu',
 			num: 10,
 			price: 1.99,
-            guidance: 'you must do this',
+            guidance: 'you must do this,you must do this,you must do this,you must do this,you must do this,you must do this,you must do this,',
 			id: 1
 		}
 		/*lx delete*/
