--- a/user/index.html
+++ b/user/index.html
@@ -124,7 +124,7 @@ var app = new Vue({
 	
 	created: function () {
 	    this.user = {
-            avatar_img: null,
+            avatar_img: "../images/ban1.jpg",
             uname: 'lx'
 		}
 	    /*lx delete*/
